# sm2slim

./: CMakeLists.txt  Makefile  main.c  sm2verify.c
cmake/: coverage.cmake
include/gmssl/: error.h  sm2verify.h
src/: asn1.c  base64.c  ec.c  merge.sh  pem.c  sm2_key.c  sm2_sign.c  sm2_z256.c  sm2verify.c  x509_alg.c
